fixed navbar alignment

--- a/src/components/BestSellers/Bestsellers.css
+++ b/src/components/BestSellers/Bestsellers.css
@@ -1,6 +1,5 @@
 .bestsellers-intro {
-    /* background: yellow; */
-    margin-top: 10px;
+    margin-top: 30px;
     width: 100%;
     height: 90px;
     align-items: center;
